--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ body {
              .chat-chiuse {
                 width: 100%; 
                 height: 60px; 
-                position: absolute; 
+                position: fixed; 
                 bottom: 0px; 
                 display: flex;
                 justify-content: end; 
